fix: tsc checks
